# internal/docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/articles": {
+        "/articles": {
             "get": {
                 "produces": [
                     "application/json"
@@ -108,7 +108,7 @@
                 }
             }
         },
-        "/api/v1/articles/slug/{slug}": {
+        "/articles/slug/{slug}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -142,7 +142,7 @@
                 }
             }
         },
-        "/api/v1/articles/{id}": {
+        "/articles/{id}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -270,7 +270,7 @@
                 }
             }
         },
-        "/api/v1/auth/login": {
+        "/auth/login": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -315,7 +315,7 @@
                 }
             }
         },
-        "/api/v1/auth/logout": {
+        "/auth/logout": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -354,7 +354,7 @@
                 }
             }
         },
-        "/api/v1/auth/refresh": {
+        "/auth/refresh": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -399,7 +399,7 @@
                 }
             }
         },
-        "/api/v1/auth/register": {
+        "/auth/register": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -444,7 +444,7 @@
                 }
             }
         },
-        "/api/v1/users/me": {
+        "/users/me": {
             "get": {
                 "produces": [
                     "application/json"
@@ -512,7 +512,7 @@
                 }
             }
         },
-        "/api/v1/users/{id}": {
+        "/users/{id}": {
             "get": {
                 "produces": [
                     "application/json"
